remove watched-tags tab
